buttons gap and flex fixed

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -13,7 +13,7 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
     background-image: url("../images/layout.png");
-     background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size: 100% auto;
     z-index: -2;
 }
@@ -67,7 +67,6 @@ body {
     width: 100%;
     height: 46vw;
     display: flex;
-    justify-content: center;
 }
 
 .line-1 {
@@ -83,40 +82,51 @@ body {
     background: #2D2F19;
 }
 
-.background-sec-2 {
-    position: absolute;
+.section2-box {
+    display: flex;
     margin: 0 auto;
     height: 46vw;
+    padding-top: 7.5vw;
+    padding-left: 3vw;
 }
+
 .background-image-sec-2 {
     height: 47vw;
     width: 100%;
     padding-left: 3vw;
-    padding-bottom: 1.5vw;}
+    padding-bottom: 1.5vw;
+}
+
+.hidden {
+    display: none !important;
+}
+
 .screen {
     display: flex;
-    width: 62vw;
-    height: 39vw;
+    width: 61vw;
+    height: 38vw;
     background-image: url(/images/screenbg.png);
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
     justify-content: center;
+    top: 7vw;
+    left: 7vw;
 }
+
 .frame {
     width: 51vw;
     height: 29vw;
     background-image: url(/images/camera1.png);
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
 }
+
 .buttons {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    gap: 13.5vw;
+    gap: 14.5vw;
 }
+
 .buttons button {
     background-color: transparent;
     border: none;
@@ -127,14 +137,14 @@ body {
 
 .lamp-icons {
     display: flex;
-    gap: 6vw;
+    gap: 2vw;
 }
 
 .group-buttons-sec2 {
     position: relative;
-     display: flex;
-     gap: 3vw;
-     justify-content: space-between;
+    display: flex;
+    gap: 2vw;
+    justify-content: space-between;
 
 }
 
